<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BFDFFF"
    tools:context=".CalcActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="66dp"
        android:layout_marginBottom="10dp"
        android:text="@string/Txtv_2"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="182dp"
        android:layout_height="0dp"
        android:layout_marginBottom="322dp"
        android:contentDescription="@string/Payaso"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@drawable/payaso" />

    <EditText
        android:id="@+id/txtPrimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="290dp"
        android:layout_marginBottom="70dp"
        android:hint="@string/Hint_1"
        android:imeActionLabel="Registrar"
        android:imeOptions="actionDone"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/buttonDivision"
        app:layout_constraintStart_toStartOf="@+id/txtSegundo"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no"/>

    <EditText
        android:id="@+id/txtSegundo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:hint="Hint_2"
        android:imeActionLabel="Registrar"
        android:imeOptions="actionDone"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        android:importantForAutofill="no"/>

    <Button
        android:id="@+id/buttonSuma"
        android:layout_width="76dp"
        android:layout_height="50dp"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="20dp"
        android:text="@string/Btn_6"
        android:textSize="28sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonResta"
        app:layout_constraintEnd_toStartOf="@+id/buttonResta"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonResta"
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:layout_marginTop="405dp"
        android:layout_marginEnd="20dp"
        android:text="@string/Btn_7"
        android:textSize="28sp"
        app:layout_constraintEnd_toStartOf="@+id/buttonProduct"
        app:layout_constraintStart_toEndOf="@+id/buttonSuma"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonProduct"
        android:layout_width="72dp"
        android:layout_height="51dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="144dp"
        android:text="@string/Btn_8"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonDivision"
        app:layout_constraintStart_toEndOf="@+id/buttonResta" />

    <Button
        android:id="@+id/buttonDivision"
        android:layout_width="68dp"
        android:layout_height="52dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="26dp"
        android:text="@string/Btn_9"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonProduct"
        app:layout_constraintTop_toBottomOf="@+id/txtPrimer" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="19dp"
        android:text="@string/Txtv_3"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/etqResultado"
        app:layout_constraintEnd_toEndOf="@+id/buttonProduct"
        app:layout_constraintTop_toBottomOf="@+id/buttonResta" />

    <TextView
        android:id="@+id/etqResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="59dp"
        android:text="@string/Txtv_4"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />
</androidx.constraintlayout.widget.ConstraintLayout>